reflect-demo/tests/errors/invalid_serde_attributes.rs
#[derive(serde::Deserialize, reflect::Input)]
struct MyStruct {
    #[serde(unknown_attributes)]
    field: u32,
}

fn main() {}
